public/stylesheets/asktheeu.css
/* ... */
a,
.request_listing a, 
.body_listing a, 
.user_listing a {
    color: #009A9D;
    text-decoration: none !important;
}
    a:hover,
    .request_listing a:hover, 
    .body_listing a:hover, 
    .user_listing a:hover {
        text-decoration: underline !important;
    }

#header_left p,
#header_left ul,
#header_left ol {
    padding-right: 120px;
}

.request_left {
    width: 600px;
}

.request_right {
    width: 240px;
}


/** PUBLIC BODIES LISTING **/
#public_body_index #left_column_flip h2,
#public_body_index #left_column_flip p {
    display: none;
}

#public_body_query {
    width: 360px;
}

/** REQUEST **/
p.subtitle {
    font-family: Verdana, Helvetica, Arial;
    font-size: 15px;
    color: #444444; /* XXX */
}

p.public-body-name-prefix {
    font-family: Verdana, Helvetica, Arial;
    font-size: 14px;
    margin-top: 0px;
    margin-bottom: -20px;
    color: #444444; /* XXX */
}

#stepwise_make_request {
    background: none;
    width: 480px;
    margin-bottom: 10px;

    font-family: Verdana, Helvetica, Arial;
    font-size: 16px;
    color: #444444; /* XXX */
}
    #stepwise_make_request strong {
        color: #009A9D;
    }

h2.foi_results {
    width: 480px;
    padding-bottom: 0px;
}

#foi_results_section,
.results_section {
    float: right;
    padding-left: 0px;
    padding-right: 150px;
    width: 480px;
}

.request_listing {
    margin-right: -210px;
}
    .request_left {
        width: 480px;
    }
    .request_right {
        width: 210px;
    }
    .request_listing span.desc {
        background: none;
    }

.date_added {
    display: none;
}

#request_header {
    background: none;
    width: 630px;
}
    #request_header_body h3,
    #request_header_body .form_item_note {
        display: none;
    }
    #request_header_body #request_header_text {
        font-size: 1em;
    }

#request_search_ahead_results {
    font-size: 1em;
    margin-left: 110px;
    margin-top: 10px;
}

#request_header input,
#request_form textarea {
    width: 500px;
}

#request_advice {
    margin-right: -30px;
}

#public_body_actions {
    display: none;
}


/** REQUEST STATES 
TODO: Need to add states for
 - icon_info_not_held_and_referred
 - icon_partial_access
 - icon_referred
 - icon_request_acknowledged
 - icon_transferred
 - icon_unsatisfactory_response
**/
.icon_waiting_response {
    background-image: url("/asktheeu-theme/images/states/icon_waiting_response.gif");
    color: #009A9D;
}
.icon_waiting_clarification {
    background-image: url("/asktheeu-theme/images/states/icon_waiting_clarification.gif");
    color: #79BB59;
}
.icon_gone_postal {
    background-image: url("/asktheeu-theme/images/states/icon_gone_postal.gif");
    color: #009A9D;
}
.icon_not_held {
    background-image: url("/asktheeu-theme/images/states/icon_info_not_held.gif");
    color: #F19100;
}
.icon_rejected {
    background-image: url("/asktheeu-theme/images/states/icon_info_refused.gif");
    color: #E10613;
}
.icon_successful {
    background-image: url("/asktheeu-theme/images/states/icon_successful.gif");
    color: #79BB59;
}
.icon_partially_successful {
    background-image: url("/asktheeu-theme/images/states/icon_partially_successful.gif");
    color: #F19100;
}
.icon_internal_review {
    background-image: url("/asktheeu-theme/images/states/icon_review_requested.gif");
    color: #009A9D;
}
.icon_error_message {
    background-image: url("/asktheeu-theme/images/states/icon_error_message.gif");
    color: #858585;
}
.icon_requires_admin {
    background-image: url("/asktheeu-theme/images/states/icon_requires_admin.gif");
    color: #858585;
}
.icon_user_withdrawn {
    background-image: url("/asktheeu-theme/images/states/icon_user_withdrawn.gif");
    color: #E10613;
}
/* TODO: Missing from designer
.icon_waiting_classification {
.icon_waiting_response_overdue {
.icon_waiting_response_very_overdue {
*/

/** MODAL SIGN-IN **/
#signin-successful,
#signin-successful a {
    font-family: Helvetica, Arial;
    color: #00aaa6;   
    font-size: 14px;
    font-weight: bold;
    padding-top: 50px;
} 

#sign_together h1 {
    margin-top: 10px;
}

#sign_together .errorExplanation {
    width: 360px;
    text-align: left;
}


/** FOOTER **/
#footer {
    height: 90px;
    margin: 0px;
    border-top-width: 1px;
}

#footer-inner {
    width: 960px;
    margin: auto;
    position: relative;
}

#access-info-logo {
    position: absolute;
    left: 0px;
    top: 10px;
}

#footer-links {
    margin-left: 80px;
    margin-top: 10px;
    float: left;

    font-family: 'Open Sans', Helvetica, Arial;
    font-size: 18px;
}
    #footer-links ul {
        list-style: none outside none;
    }
    #footer-links ul li {
        float: left;
        margin-right: 25px;
    }
    #footer-links ul a {
        text-decoration: none;
        color: #009a9d;
    }
    #footer-links ul a:hover {
        text-decoration: underline;
    }
    
#credits {
    float: right;
    margin-top: 13px;
    margin-right: 95px;
    width: 340px;

    font-family: Verdana, Helvetica, Arial;
    font-size: 11px;
    text-align: right;
}
    #credits a {
        text-decoration: none;
        color: #00aaa6;
    }

#creative-commons-logo {
    position: absolute;
    right: 0px;
    top: 30px;
}

